--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     ]
   },
   "devDependencies": {
+    "@redwoodjs/auth-dbauth-setup": "7.6.2",
     "@redwoodjs/core": "7.6.2",
     "@redwoodjs/project-config": "7.6.2"
   },
