--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth-dbauth-web": "7.6.2",
     "@redwoodjs/forms": "7.6.2",
     "@redwoodjs/router": "7.6.2",
     "@redwoodjs/web": "7.6.2",
@@ -19,8 +20,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.11.4",
+    "@mantine/core": "^7.10.0",
+    "@mantine/hooks": "^7.10.0",
     "@redwoodjs/vite": "7.6.2",
     "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19"
+    "@types/react-dom": "^18.2.19",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1"
   }
 }
